[package]
name = "unstacked"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.18.1"
gpgme = "0.11.0"
auth-git2 = "0.5.3"
serde_json = "1.0.108"
derive_more = "0.99.17"
termion = "2.0.3"

[dependencies.clap]
version = "4.4.10"
features = ["derive"]

[dependencies.serde]
version = "1.0.193"
features = ["derive"]
